--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-  
 DB_SERVER_HOST=localhost
-DB_SERVER_PORT=3306
-DB_SERVER_USERNAME=root
-DB_SERVER_PASSWORD=
-DATABASE=restapi
+DB_SERVER_PORT=5333
+DB_SERVER_USERNAME=postgres
+DB_SERVER_PASSWORD=laryssa
+DATABASE=teste
