--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DB_SERVER_PORT=5333
 DB_SERVER_USERNAME=postgres
 DB_SERVER_PASSWORD=laryssa
 DATABASE=teste
+JWT_SECRET=laryssaGomes
+JWT_EXPIRATION_TIME=6000
